# mcp-testing-sensei

./: .gitignore  .pre-commit-config.yaml  DISTRIBUTION.md  Dockerfile  Makefile  README.md  RELEASE.md  build_optimized.sh  flake.nix  install.sh  linter.py  main.py  manual_test.py  mcp_server.py  mcp_testing_sensei.spec  mcp_testing_sensei_optimized.spec  package.json  pyproject.toml  pyproject.toml.setuptools  requirements.txt  run.js  setup.py  test_install.sh  test_mcp_server.py  verify_server.py
.github/workflows/: ci.yml  release.yml
scripts/: release.sh  sync-version.py
tests/: test_linter.py  test_mcp_server.py
