[tool.poetry]
name = "mcp-unit-test-linter"
version = "0.1.0"
description = "An MCP server to enforce/guide agentic coding tools to use general unit testing standards."
authors = ["Gemini"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^3.0"
ruff = "^0.1.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # Error
    "W",  # Warning
    "F",  # Pyflakes
    "I",  # isort
    "D",  # pydocstyle
]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start on the second line
    "D406", # Section name should end with a colon
    "D407", # Missing dashed underline after section header
    "D413", # Missing blank line after last section
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
